<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/tNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria"/>

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categoria_arrays"
        android:prompt="@string/categoria_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codigoBarra" />

    <EditText
        android:id="@+id/tCodigoBarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/tDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precoVenda" />

    <EditText
        android:id="@+id/tPrecoVenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fornecedor"/>

    <EditText
        android:id="@+id/tFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:text="@string/urlFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tUrlFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />


    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/cadastrar"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:background="@color/accent_material_light" />



</LinearLayout>

