<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">



    <!-- Nome produto -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Nome -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nomeProdutos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tNomeProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!-- Descricao -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Descrica -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/descricao"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- Preco Venda -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Preco Venda -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/precoVenda"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tpreVen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!-- Codigo de Barra -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginBottom="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Codigo de Barra -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fornecedor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tCodBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
